; ModuleID = '/home/carl/AnghaBench/reactos/base/shell/cmd/extr_misc.c_IsValidPathName.c'
source_filename = "/home/carl/AnghaBench/reactos/base/shell/cmd/extr_misc.c_IsValidPathName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @IsValidPathName(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %6 = load i32, i32* @MAX_PATH, align 4
  %7 = zext i32 %6 to i64
  %8 = call i8* @llvm.stacksave()
  store i8* %8, i8** %3, align 8
  %9 = alloca i32, i64 %7, align 16
  store i64 %7, i64* %4, align 8
  %10 = load i32, i32* @MAX_PATH, align 4
  %11 = call i32 @GetCurrentDirectory(i32 %10, i32* %9)
  %12 = load i32*, i32** %2, align 8
  %13 = call i32 @SetCurrentDirectory(i32* %12)
  store i32 %13, i32* %5, align 4
  %14 = call i32 @SetCurrentDirectory(i32* %9)
  %15 = load i32, i32* %5, align 4
  %16 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %16)
  ret i32 %15
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @GetCurrentDirectory(i32, i32*) #2

declare dso_local i32 @SetCurrentDirectory(i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
